# counter-pinocchio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-test-and-benchmark.yml  test-and-bench.yml
benches/: compute_units.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: create.rs  fetch.rs  increase.rs  mod.rs
cli/src/helpers/: counter.rs  keypair.rs  mod.rs
program/: Cargo.toml
program/benches/: compute_units.rs
program/src/: helpers.rs  lib.rs
program/src/instructions/: create.rs  increase.rs
program/src/state/: utils.rs
program/tests/: mollusk_tests.rs
src/: helpers.rs  lib.rs
src/instructions/: create.rs  increase.rs
src/state/: counter.rs
