[package]
name = "counter-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"

[dev-dependencies]
mollusk-svm = "0.3.0"
mollusk-svm-bencher = "0.3.0"
solana-sdk = "2.2.1"

[features]
no-entrypoint = []

