[workspace]
resolver = "2"
members = ["cli", "program"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.2.1"
solana-program-runtime = "=2.3.1"
solana-sdk = "2.2.1"
tokio = { version = "1.0", features = ["full"] }

